--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["Blog", "About me", "portfolio"],
+  "author": "Marveey Goodlife",
   "license": "ISC",
-  "description": "",
+  "description": "This is a personal blog page, it sings my tales to user or visitors",
   "dependencies": {
     "express": "^5.1.0",
     "nodemon": "^3.1.10",
