Initial commit with contact form functionality contact form now sends data to server and handles responses correctly. Added contact.js route to handle form submissions. Updated server.js to serve static files and use contact route. Updated public/script.js to handle form submission and display response messages. Updated package.json and package-lock.json with necessary dependencies. Updated public/index.html with contact form structure. Updated public/style.css for basic styling of the contact form.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "about-me",
+  "name": "About-me",
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
@@ -7,11 +7,14 @@
     "start": "node server.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Marveey Goodlife",
   "license": "ISC",
-  "description": "",
+  "description": "This is a personal portfolio page",
   "dependencies": {
+    "body-parser": "^2.2.0",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "nodemailer": "^7.0.3",
     "nodemon": "^3.1.10",
     "path": "^0.12.7"
   }
